# soter-smt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  coverage.yml  security.yml  stability.yml
crates/cvc5-sys/: Cargo.toml  build.rs  cvc5_wrapper.cc  cvc5_wrapper.h
crates/cvc5-sys/src/: lib.rs
crates/soter/: Cargo.toml
crates/soter/src/: arbiter.rs  backend.rs  cvc5.rs  formation.rs  lib.rs  provenance.rs  suggestor.rs  types.rs
crates/soter/tests/: arbiter_expense_invariant.rs  cvc5_ffi.rs  suggestor.rs
kb/: Home.md  LOG.md
kb/Architecture/: CVC5 FFI Boundary.md  Evidence Semantics.md  Surface.md
kb/Modules/: Soter.md
kb/Planning/: MILESTONES.md
