[workspace]
resolver = "2"
members = [
    "crates/cvc5-sys",
    "crates/soter",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/soter-smt"

[workspace.dependencies]
# soter-internal
soter-cvc5-sys = { path = "crates/cvc5-sys", package = "converge-soter-cvc5-sys", version = "0.2.1" }
soter = { path = "crates/soter", package = "converge-soter-smt", version = "0.2.1" }

# Converge contracts
converge-pack = "3.9.1"

# Shared
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
proptest = "1.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
