[package]
name = "converge-soter-cvc5-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI boundary for the CVC5 SMT solver used by soter."
keywords = ["cvc5", "smt", "ffi", "solver"]
categories = ["external-ffi-bindings", "algorithms"]
build = "build.rs"
links = "cvc5"

[lib]
name = "soter_cvc5_sys"
path = "src/lib.rs"

[features]
default = []
link = []

[dependencies]

[build-dependencies]
cc = "1"

[lints.rust]
unsafe_code = "allow"
# sys crate: unsafe is the intentional native boundary.

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
